@@ -1,3 +1,8 @@
+2003-04-27  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* properties.c:  HIGify the preferences dialog. Also, hook up 
+	the help button.
+
 2003-03-07  Mark McLoughlin  <mark@skynet.ie>
 
 	* modemlights.c: (show_help_cb): update for screen-exec changes.
